UI fixes; add tooltips, align icons, show correct icon on DM stream

--- a/shared/ui/styles/stream.less
+++ b/shared/ui/styles/stream.less
@@ -164,6 +164,10 @@
 			font-size: 16px;
 			color: @text-color-highlight;
 
+			.organization {
+				vertical-align: -2px;
+			}
+
 			.panel-title {
 				.iconx {
 					padding-right: 5px;
@@ -1691,7 +1695,7 @@
 			padding: 0;
 		}
 		.form-body {
-			padding: 10px 20px 20px 20px;
+			padding: 20px;
 		}
 		.explainer {
 			color: @text-color-subtle;
